--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "highcharts": "^11.2.0",
     "mysql2": "^3.6.3"
   }
 }
